try fix font size on mobile and add viewport

--- a/main.sass
+++ b/main.sass
@@ -35,7 +35,7 @@ $footer: $footer-top + $footer-bottom + $footer-h
 // base font size
 html
     height: 100%
-    font-size: 16px
+    font-size: 12pt
 
 body
     height: 100%
@@ -90,7 +90,7 @@ nav
     &.nav-bar
         margin-top: 1em
         .site-title
-            margin-left: 1em
+            margin-left: 0.4em
             font-weight: bold
         .nav-brand
             padding: 0.4em
@@ -99,8 +99,8 @@ nav
             &:hover
                 color: white
         .nav-bar-right
-            --nav-item-width: 4em
-            --nav-gap: 0.5em
+            --nav-item-width: 3.6em
+            --nav-gap: 0.1em
             display: grid
             grid:
                 template-columns: repeat(3, var(--nav-item-width))
